--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "mocha": "^6.1.4"
-  }
+  },
+    "scripts": {
+    "lint": "eslint **/*.js",
+    "test": "mocha test/**"
+} 
 }
