--- a/package.json
+++ b/package.json
@@ -7,14 +7,25 @@
     "test": "mocha test/**"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "~4.16.0",
     "express-handlebars": "^3.0.2",
-    "mongoose": "^5.5.5"
+    "mongoose": "^5.5.5",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^5.16.0",
     "mocha": "^6.1.4"
-  }
+  },
+  "description": "advanced JavaScript",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
